tests/paczka1/fuzzy1/75934439.err
Error in line 3: rqrFVPc A840 63,3
Error in line 1: Wlp5Ffy S304 58,5
Error in line 17: qG9v2JTr7P A840 16,4
Error in line 25: qG9v2JTr7P S999 66,04
Error in line 24: qG9v2JTr7P A119 83,7
Error in line 38: apvvdnzjW A840 69,7
